Fixed: FS#940 - Interface is squished in Google Chrome
git-svn-id: svn://svn.ispconfig.org/ispconfig3/trunk@1546 c1a6f2c7-8504-0410-933a-a4dae0184b0a

--- a/interface/web/themes/default/css/screen/basemod.css
+++ b/interface/web/themes/default/css/screen/basemod.css
@@ -36,7 +36,8 @@
 	/* (en) Layout: width, background, borders */
 	/* (de) Layout: Breite, Hintergrund, Rahmen */
 	/*#page_margins { min-width: 980px; max-width: 80%; background: #fff;}*/
-	#page_margins { min-width: 980px; max-width: 80%; background: #fff; display: inline-block;}
+	/* #page_margins { min-width: 980px; max-width: 80%; background: #fff; display: inline-block;}*/
+	#page_margins { min-width: 980px; max-width: 80%; background: #fff; display: table;}
 	#page{ padding: 10px; }
 	
 	/* (en) Designing main layout elements */
